Fix: Use border collapse in JUI stylesheet - 8931

--- a/media/css/jquery.dataTables_themeroller.css
+++ b/media/css/jquery.dataTables_themeroller.css
@@ -7,6 +7,7 @@ table.dataTable {
 	margin: 0 auto;
 	clear: both;
 	width: 100%;
+	border-collapse: collapse;
 }
 
 table.dataTable thead th {
